--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Custom
+bower_components
+dist
+test/results/*
+.tmp
+.build
+.publish
+.swp
+
 # Logs
 logs
 *.log
@@ -12,12 +21,6 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
-
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
 
 # Dependency directory
 # Deployed apps should consider commenting this line out:
