--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,7 @@
 {
-  "name": "angular-closure",
-  "version": "0.9.0",
+  "name": "angular-spinner",
   "devDependencies": {
-    "angular": "1.2.23",
-    "angular-mocks": "1.2.23"
+    "angular": "1.2.26",
+    "angular-mocks": "1.2.26"
   }
 }
