--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "angular-closure",
-  "version": "1.0.0",
-  "description": "Bring class into javascript with extendable and bindable feature.",
+  "name": "angular-spinner",
+  "version": "1.2.26",
+  "description": "Spinner directive based on $http interceptor",
   "main": "gulpfile.js",
   "scripts": {
     "test": "gulp test"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/angularifyjs/angular-closure.git"
+    "url": "git://github.com/angularifyjs/angular-spinner.git"
   },
   "keywords": [
     "angular",
-    "closure",
-    "class",
-    "extend",
-    "bind"
+    "spinner",
+    "http"
   ],
   "author": "Henry Tao <hi@henrytao.me>",
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/angularifyjs/angular-closure/blob/master/LICENSE",
+      "url": "https://github.com/angularifyjs/angular-spinner/blob/master/LICENSE",
       "description": "Copyright (c) 2014 Angularfiy.org & HenryTao."
     }
   ],
   "bugs": {
-    "url": "https://github.com/angularifyjs/angular-closure/issues"
+    "url": "https://github.com/angularifyjs/angular-spinner/issues"
   },
-  "homepage": "https://github.com/angularifyjs/angular-closure",
+  "homepage": "https://github.com/angularifyjs/angular-spinner",
   "devDependencies": {
-    "coveralls": "^2.11.1",
+    "coveralls": "2.11.1",
     "expect.js": "0.3.1",
     "gulp": "3.8.7",
     "gulp-jshint": "1.7.1",
@@ -44,10 +42,11 @@
     "mocha": "1.17.1",
     "phantomjs": "1.9.7-15",
     "run-sequence": "0.3.6",
-    "gulp-uglify": "^1.0.0",
-    "gulp-header": "^1.0.5",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.3.4",
-    "gulp-ng-annotate": "^0.3.0"
+    "gulp-connect": "2.1.0",
+    "gulp-uglify": "1.0.0",
+    "gulp-header": "1.0.5",
+    "gulp-clean": "0.3.1",
+    "gulp-concat": "2.3.4",
+    "gulp-ng-annotate": "0.3.0"
   }
 }
